lendo diretorio de arquivos texto, contando numero de palavras em cada um deles e populando tablea hash